--- a/angular.json
+++ b/angular.json
@@ -52,10 +52,33 @@
               "sourceMap": false,
               "namedChunks": false,
               "extractLicenses": true,
-              "buildOptimizer": true
+              "buildOptimizer": true,
+              "aot": true
+            },
+            "development": {
+              "budgets": [
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb"
+                }
+              ],
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "vendorChunk": true,
+              "sourceMap": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "buildOptimizer": true,
+              "aot": true
             }
           },
-          "defaultConfiguration": ""
+          "defaultConfiguration": "production"
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
@@ -65,6 +88,9 @@
           "configurations": {
             "production": {
               "browserTarget": "knowgod:build:production"
+            },
+            "development": {
+              "browserTarget": "knowgod:build:development"
             }
           }
         },
@@ -93,6 +119,10 @@
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
+            "tsConfig": [
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json"
+            ],
             "lintFilePatterns": [
               "src/**/*.ts",
               "src/**/*.html"
@@ -114,6 +144,9 @@
           "configurations": {
             "production": {
               "devServerTarget": "knowgod:serve:production"
+            },
+            "development": {
+              "devServerTarget": "knowgod:serve:development"
             }
           }
         }
