Use pipx to install awscli as pip no longer allows you to install externally managed environment

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -60,8 +60,14 @@ jobs:
       - name: Repository checkout
         uses: actions/checkout@v4
 
-      - name: Install AWSCLI
-        run: pip install --user awscli
+      - name: Install pipx
+        run: sudo apt-get install -y pipx
+      
+      - name: Ensure pipx is on the PATH
+        run: python3 -m pipx ensurepath
+
+      - name: Install AWSCLI with pipx
+        run: pipx install awscli
 
       - name: Node.js setup
         uses: actions/setup-node@v4
