--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start:dev": "ng serve --configuration development",
     "build": "ng build --configuration production",
     "build:dev": "ng build --configuration development",
-    "test": "ng test",
+    "test": "ng test --watch=false",
     "lint": "npx eslint 'src/**/*.{js,ts}' --quiet --fix",
     "e2e": "ng e2e",
     "prettier:check": "prettier '{{src,embed}/**/*.{js,json,ts,tsx,html},./*.{js,json,ts,tsx,yml,html}}' --list-different",
@@ -53,17 +53,17 @@
     "@types/node": "^18.0.0",
     "@types/text-encoding": "0.0.35",
     "@types/xml2js": "^0.4.8",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@typescript-eslint/eslint-plugin": "^8.12.2",
+    "@typescript-eslint/parser": "^8.12.2",
     "eslint": "^8.33.0",
     "husky": "^8.0.0",
     "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~6.0.0",
-    "karma": "~6.4.0",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.4",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "prettier": "^3.0.0",
     "pretty-quick": "^3.1.0",
     "protractor": "^7.0.0",
