upgrading node on GitHub Actions

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Node.js setup
         uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version-file: .tool-versions
 
       - name: 📦 Install dependencies
         run: yarn install
@@ -63,7 +63,7 @@ jobs:
       - name: Node.js setup
         uses: actions/setup-node@v4
         with:
-          node-version: '16.x'
+          node-version-file: .tool-versions
 
       - name: 📦 Install dependencies
         run: yarn install
