--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
-    "@cruglobal/godtools-shared": "1.0.1",
+    "@cruglobal/godtools-shared": "~1.0.1",
     "@rails/actioncable": "^7.0.0",
     "core-js": "^3.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
-    "lottie-web": "5.12.2",
+    "lottie-web": "^5.12.2",
     "ngx-lottie": "^8.3.0",
     "ngx-toastr": "^17.0.2",
     "rxjs": "7.8.1",
@@ -39,11 +39,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.11",
-    "@angular-eslint/builder": "16.1.0",
-    "@angular-eslint/eslint-plugin": "16.1.0",
-    "@angular-eslint/eslint-plugin-template": "16.1.0",
-    "@angular-eslint/schematics": "16.1.0",
-    "@angular-eslint/template-parser": "16.1.0",
+    "@angular-eslint/builder": "~16.1.0",
+    "@angular-eslint/eslint-plugin": "~16.1.0",
+    "@angular-eslint/eslint-plugin-template": "~16.1.0",
+    "@angular-eslint/schematics": "~16.1.0",
+    "@angular-eslint/template-parser": "~16.1.0",
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.12",
     "@angular/language-service": "^17.3.12",
