--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.12",
     "@angular/language-service": "^17.3.12",
-    "@types/jasmine": "~3.10.0",
+    "@types/jasmine": "~5.1.4",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^18.0.0",
     "@types/text-encoding": "0.0.35",
@@ -56,7 +56,7 @@
     "@typescript-eslint/parser": "^8.12.2",
     "eslint": "^8.33.0",
     "husky": "^8.0.0",
-    "jasmine-core": "~4.6.0",
+    "jasmine-core": "5.4.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
