Upgrading eslint to v9 and moving all esLint packages to devDependencies.

--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "build": "ng build --configuration production",
     "build:dev": "ng build --configuration development",
     "test": "ng test --watch=false",
-    "lint": "npx eslint 'src/**/*.{js,ts}' --quiet --fix",
+    "lint": "npx eslint 'src/**/*.{js,ts,html}' --quiet --fix",
     "prettier:check": "prettier '{{src,embed}/**/*.{js,json,ts,tsx,html},./*.{js,json,ts,tsx,yml,html}}' --list-different",
     "prettier:write": "prettier '{{src,embed}/**/*.{js,json,ts,tsx,html},./*.{js,json,ts,tsx,yml,html}}' --write",
     "precommit": "pretty-quick --staged"
   },
+  "type": "module",
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.12",
@@ -26,9 +27,6 @@
     "@cruglobal/godtools-shared": "~1.0.1",
     "@rails/actioncable": "~8.0.0",
     "core-js": "^3.39.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^5.0.0",
     "lottie-web": "^5.12.2",
     "ngx-lottie": "^8.3.0",
     "ngx-toastr": "^17.0.2",
@@ -54,7 +52,10 @@
     "@types/xml2js": "^0.4.8",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
-    "eslint": "^8.33.0",
+    "eslint": "~9.15.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.0",
     "jasmine-core": "5.4.0",
     "karma": "^6.4.4",
