Ensure we keep our packages up to date

--- a/package.json
+++ b/package.json
@@ -37,19 +37,20 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.11",
-    "@angular-eslint/builder": "17.3.0",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/schematics": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
+    "@angular-eslint/builder": "~17.3.0",
+    "@angular-eslint/eslint-plugin": "~17.3.0",
+    "@angular-eslint/eslint-plugin-template": "~17.3.0",
+    "@angular-eslint/schematics": "~17.3.0",
+    "@angular-eslint/template-parser": "~17.3.0",
+    "@angular-eslint/utils": "~17.3.0",
     "@angular/cli": "^17.3.11",
     "@angular/compiler-cli": "^17.3.12",
     "@angular/language-service": "^17.3.12",
     "@types/jasmine": "~5.1.4",
-    "@types/jasminewd2": "~2.0.8",
+    "@types/jasminewd2": "~2.0.13",
     "@types/node": "^18.0.0",
-    "@types/text-encoding": "0.0.35",
-    "@types/xml2js": "^0.4.8",
+    "@types/text-encoding": "^0.0.39",
+    "@types/xml2js": "~0.4.14",
     "@typescript-eslint/eslint-plugin": "^8.12.2",
     "@typescript-eslint/parser": "^8.12.2",
     "eslint": "~9.15.0",
@@ -57,7 +58,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.0",
-    "jasmine-core": "5.4.0",
+    "jasmine-core": "~5.4.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
