--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "npx eslint 'src/**/*.{js,ts,html}' --quiet --fix",
     "prettier:check": "prettier '{{src,embed}/**/*.{js,json,ts,tsx,html},./*.{js,json,ts,tsx,yml,html}}' --list-different",
     "prettier:write": "prettier '{{src,embed}/**/*.{js,json,ts,tsx,html},./*.{js,json,ts,tsx,yml,html}}' --write",
-    "precommit": "pretty-quick --staged"
+    "precommit": "pretty-quick --staged",
+    "postinstall": "husky install"
   },
   "type": "module",
   "private": true,
