--- a/angular.json
+++ b/angular.json
@@ -105,10 +105,7 @@
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
-            "styles": [
-              "src/styles.css"
-            ],
+            "karmaConfig": "src/karma.conf.cjs",
             "scripts": [],
             "assets": [
               "src/assets"
