--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,6 @@
     "experimentalDecorators": true,
     "target": "ES2022",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2017", "dom"],
-    "paths": {
-      "@angular/*": ["node_modules/@angular/*"],
-      "src/*": ["src/*"]
-    }
+    "lib": ["es2017", "dom"]
   }
 }
