--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "ngx-toastr": "^17.0.2",
     "rxjs": "7.8.1",
     "ts-clipboard": "^1.0.17",
-    "zone.js": "~0.13.0"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.11",
