--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@angular/compiler-cli": "^17.3.12",
     "@angular/language-service": "^17.3.12",
     "@types/jasmine": "^5.1.4",
-    "@types/node": "^18.0.0",
+    "@types/node": "20.17.24",
     "@typescript-eslint/eslint-plugin": "^8.15.0",
     "@typescript-eslint/parser": "^8.15.0",
     "eslint": "^9.15.0",
@@ -65,5 +65,6 @@
     "pretty-quick": "^4.0.0",
     "stream": "^0.0.3",
     "typescript": "^5.4.5"
-  }
+  },
+  "packageManager": "yarn@4.7.0"
 }
