--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
     "@angular/router": "^17.3.12",
-    "@cruglobal/godtools-shared": "^1.1.2",
+    "@cruglobal/godtools-shared": "1.1.3-PR790-SNAPSHOT.1718",
     "@rails/actioncable": "~8.0.0",
     "core-js": "^3.39.0",
     "lottie-web": "^5.12.2",
